--- a/frontend/css/styles.css
+++ b/frontend/css/styles.css
@@ -11,13 +11,6 @@ body {
   flex-direction: column;
 }
 
-main {
-  padding-top: 100px;
-  padding-left: 20px;
-  padding-right: 20px;
-  margin-top: auto;
-}
-
 .navbar {
   background-color: whitesmoke;
   position: fixed;
@@ -86,6 +79,29 @@ main {
 
 }
 
+main {
+  padding-top: 80px;
+  margin-top: auto;
+}
+
+.lp-banner {
+  background: linear-gradient(rgba(255,0,0,0),black), url("../images/lp-banner1.jpg");
+  background-position: center;
+  height: 400px;
+  display: flex;
+  background-size: cover;
+  justify-content: center;
+  position: relative;
+}
+
+.lp-banner h1 {
+  position: absolute;
+  bottom: 10px;
+  left: 20px;
+  color: whitesmoke;
+  text-shadow: 2px, 2px, 4px rgba(0, 0, 0, 0.7);
+}
+
 footer {
   background-color: rgb(15, 15, 15);
   height: auto;
@@ -101,20 +117,46 @@ footer {
   padding: 40px 225px;
 }
 
-.f-nav ul {
+.f-list {
   list-style: none;
   align-content: center;
-  padding: 5px;
+  display: flex;
+  gap: 40px;
+  
 }
 
-.f-nav li {
+.f-nav, .f-mem, .f-acc, .f-support {
+  margin-right: 20px;
+}
+
+.f-nav ul, .f-mem ul, .f-acc ul, .f-support ul {
+  list-style: none;
+  align-content: center;
+  padding: 0px;
+}
+
+.f-nav li, .f-mem li, .f-acc li, .f-support li {
   justify-content: flex-start;
+  padding-bottom: 5px;
+  padding-right: 0;
+  margin: 0;
 }
 
-.f-nav a {
+.f-nav a, .f-mem a, .f-acc a, .f-support a {
   text-decoration: none;
   font-weight: 100;
-  color: whitesmoke;
+  color: rgb(158, 158, 158);
+}
+
+.f-logo {
+  align-self: flex-end;
+  align-items: flex-end;
+  padding: 0;
+}
+
+.f-logo img {
+  height: auto;
+  width: 150px;
 }
 
 .authors, .sids {
@@ -134,7 +176,13 @@ footer {
   list-style: none;
   align-content: center;
   display: inline-flex;
-  gap: 20px;
+  gap: 0px;
+}
+
+.authors li:not(:last-child)::after {
+  content: "|";
+  margin: 0 10px;
+  align-items: center;
 }
 
 .authors a {
