--- a/frontend/css/styles.css
+++ b/frontend/css/styles.css
@@ -1,3 +1,10 @@
+html {
+  margin: 0;
+  padding: 0;
+  width: 100%;
+  overflow-x: hidden;
+}
+
 body {
   background: linear-gradient(rgb(221, 221, 221), rgb(182, 182, 182));
   background-repeat: no-repeat;
@@ -9,22 +16,38 @@ body {
   padding: 0;
   display: flex;
   flex-direction: column;
+  overflow-x: hidden;
+  width: 100%;
+}
+
+.main-wrapper {
+  width: 100%;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+.content-container {
+  max-width: 1200px;
+  margin: 0 auto;
+  padding: 0 20px;
 }
 
 .navbar {
   background-color: whitesmoke;
   position: fixed;
   top: 0;
+  left: 0;
   width: 100%;
   height: 80px;
   padding: 10px 20px;
-  margin: 0;
   display: flex;
   justify-content: space-between;
   align-items: center;
   font-weight: 700;
   gap: 20px;
   box-sizing: border-box;
+  z-index: 1000;
 }
 
 .navbar a {
@@ -53,8 +76,7 @@ body {
 .nav-links {
   display: flex;
   gap: 20px;
-  margin-left: 20px;
-  justify-content: flex-start;
+  justify-content: space-between;
   flex-grow: 1;
 }
 
@@ -64,6 +86,7 @@ body {
   gap: 20px;
   padding: 0;
   margin: 0;
+  justify-content: space-around;
 }
 
 .usr-panel {
@@ -80,18 +103,29 @@ body {
 }
 
 main {
-  padding-top: 80px;
-  margin-top: auto;
+  padding: 20px;
+  margin: 0; 
+  max-width: 1200px;
+}
+
+.lp-main-content {
+  padding: 0px;
+  width: 100%;
+  margin: 0;
 }
 
 .lp-banner {
-  background: linear-gradient(rgba(255,0,0,0),black), url("../images/lp-banner1.jpg");
+  background: linear-gradient(to bottom, rgba(0,0,0,0.5), rgba(0,0,0,0)), url("../images/lp-banner1.jpg");
   background-position: center;
   height: 400px;
+  width: 100%;
   display: flex;
   background-size: cover;
+  align-items: center;
   justify-content: center;
   position: relative;
+  margin: 0;
+  padding: 0;
 }
 
 .lp-banner h1 {
@@ -99,7 +133,58 @@ main {
   bottom: 10px;
   left: 20px;
   color: whitesmoke;
-  text-shadow: 2px, 2px, 4px rgba(0, 0, 0, 0.7);
+  text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.7);
+}
+
+.lp-brief {
+  padding: 20px;
+  font-weight: 500;
+  display:grid;
+  grid-template-columns: repeat(2, 1fr);
+  
+  
+}
+
+.lp-intro {
+  padding: 20px;
+  background-color: white;
+  box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.7)
+}
+
+.lp-main-content .join-now {
+  background-color: rgb(45, 71, 45);
+  display: block;
+  height: 100px;
+  padding-bottom: 40px;
+  margin: 0;
+  align-content: center;
+  justify-content: center;
+  text-align: center;
+  color: white;
+  width: 100%;
+  box-sizing: border-box;
+  position: relative;
+  left: 0;
+  
+}
+
+.lp-main-content .join-now a {
+  display: inline-flex;
+  background-color: rgb(33, 136, 255);
+  border-radius:10px;
+  color: white;
+  text-decoration: none;
+  padding: 15px 20px;
+  font-size: 16px;
+  font-weight: bolder;
+  border: none;
+  cursor: pointer;
+  box-sizing: border-box;
+}
+
+.lp-main-content .join-now a:hover {
+  background-color: white;
+  color: green;
 }
 
 footer {
@@ -107,21 +192,24 @@ footer {
   height: auto;
   width: 100%;
   bottom: 0;
-  position: absolute;
+  
   color: whitesmoke;
   font-size: small;
   font-weight: 200;
+  margin-top: auto;
+  padding: 40px 0;
 }
 
 .f-format {
-  padding: 40px 225px;
+  width: 100%;
+  max-width: 1200px;
+  margin: 0 auto;
 }
 
 .f-list {
-  list-style: none;
-  align-content: center;
   display: flex;
-  gap: 40px;
+  justify-content: space-between;
+  flex-wrap: wrap;
   
 }
 
@@ -131,7 +219,6 @@ footer {
 
 .f-nav ul, .f-mem ul, .f-acc ul, .f-support ul {
   list-style: none;
-  align-content: center;
   padding: 0px;
 }
 
@@ -144,8 +231,7 @@ footer {
 
 .f-nav a, .f-mem a, .f-acc a, .f-support a {
   text-decoration: none;
-  font-weight: 100;
-  color: rgb(158, 158, 158);
+  color: rgb(200, 200, 200);
 }
 
 .f-logo {
