--- a/frontend/css/styles.css
+++ b/frontend/css/styles.css
@@ -18,19 +18,7 @@ body {
   flex-direction: column;
   overflow-x: hidden;
   width: 100%;
-}
-
-.main-wrapper {
-  width: 100%;
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-}
-
-.content-container {
-  max-width: 1200px;
-  margin: 0 auto;
-  padding: 0 20px;
+  
 }
 
 .navbar {
@@ -58,6 +46,7 @@ body {
 .navbar a:hover {
   color: rgb(38, 0, 255);
 }
+
 .nav-header {
   display: flex;
   align-items: center;
@@ -97,94 +86,63 @@ body {
 }
 
 .usr-panel img {
-  width: 30px;
-  height: auto;
+  width: 36px;
+  height: 36px;
 
 }
 
 main {
-  padding: 20px;
+  padding: 0;
   margin: 0; 
-  max-width: 1200px;
-}
-
-.lp-main-content {
-  padding: 0px;
-  width: 100%;
-  margin: 0;
+  display: flex;
+  flex-direction: column;
+  flex: 1;
+  align-items: center;
+  justify-content: center;
 }
 
 .lp-banner {
-  background: linear-gradient(to bottom, rgba(0,0,0,0.5), rgba(0,0,0,0)), url("../images/lp-banner1.jpg");
-  background-position: center;
-  height: 400px;
-  width: 100%;
   display: flex;
-  background-size: cover;
+  height: 400px;
+  width: 100vw;
   align-items: center;
   justify-content: center;
+  
   position: relative;
-  margin: 0;
-  padding: 0;
+  
 }
 
-.lp-banner h1 {
+.lp-banner img {
+  height: 400px;
+  width: 100%;
+  object-fit: cover;
+}
+
+.lp-banner .content {
+  max-width: 1200px;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
   position: absolute;
-  bottom: 10px;
-  left: 20px;
   color: whitesmoke;
   text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.7);
 }
 
-.lp-brief {
+.lp-banner .content img {
+  height: 40px;
+  width: 40px;
+}
+
+.main-content {
+  max-width: 1200px;
+  padding-top: 100px;
   padding: 20px;
-  font-weight: 500;
-  display:grid;
-  grid-template-columns: repeat(2, 1fr);
-  
-  
-}
-
-.lp-intro {
-  padding: 20px;
-  background-color: white;
-  box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.7)
-}
-
-.lp-main-content .join-now {
-  background-color: rgb(45, 71, 45);
-  display: block;
-  height: 100px;
-  padding-bottom: 40px;
-  margin: 0;
-  align-content: center;
-  justify-content: center;
-  text-align: center;
-  color: white;
-  width: 100%;
-  box-sizing: border-box;
-  position: relative;
-  left: 0;
-  
-}
-
-.lp-main-content .join-now a {
-  display: inline-flex;
-  background-color: rgb(33, 136, 255);
-  border-radius:10px;
-  color: white;
-  text-decoration: none;
-  padding: 15px 20px;
-  font-size: 16px;
-  font-weight: bolder;
-  border: none;
-  cursor: pointer;
-  box-sizing: border-box;
-}
-
-.lp-main-content .join-now a:hover {
-  background-color: white;
-  color: green;
+  margin: 0 auto;
+  left: 0px;
+  align-items: flex-start;
+  justify-content: flex-start;
+  display: grid;
+  grid-template-columns: 2;
 }
 
 footer {
@@ -192,7 +150,6 @@ footer {
   height: auto;
   width: 100%;
   bottom: 0;
-  
   color: whitesmoke;
   font-size: small;
   font-weight: 200;
